--- a/index.html
+++ b/index.html
@@ -1257,39 +1257,11 @@
 
 
 <style>
-/* --- About badges: refined cards aesthetic --- */
-.about .about-features-grid{
-  background: transparent !important;
-  grid-template-columns: repeat(4, minmax(0,1fr));
-  gap: var(--spacing-md);
-  padding: 0;
-  margin-top: var(--spacing-lg);
-}
-.about .feature-item{
-  background: #EEF3EE; /* soft sage tint */
-  border: 1px solid rgba(126,143,119,.28); /* based on --sage-green-dark */
-  border-radius: 16px;
-  box-shadow: 0 6px 16px rgba(0,0,0,.06);
-  min-height: 140px;
-  display: flex; flex-direction: column; align-items: center; justify-content: center;
-  text-align: center;
-  padding: var(--spacing-md) var(--spacing-lg);
-}
-.about .feature-item + .feature-item{ border-left: 0 !important; } /* remove old separators */
-.about .feature-icon{ margin-bottom: 10px; color: var(--sage-green-dark); }
-.about .feature-icon-svg{ width: 40px; height: 40px; stroke: currentColor; stroke-width: 1.8; display:block; }
-.about .feature-text{ color: var(--soft-charcoal); font-weight: 700; font-size: 1.05rem; letter-spacing: .01em; }
-
-/* Hover lift for a touch of polish */
-.about .feature-item{ transition: transform var(--transition-smooth), box-shadow var(--transition-smooth); }
-.about .feature-item:hover{ transform: translateY(-2px); box-shadow: 0 10px 20px rgba(0,0,0,.08); }
-
-/* Responsive layout */
-@media (max-width: 900px){
-  .about .about-features-grid{ grid-template-columns: repeat(2, minmax(0,1fr)); }
-}
+/* --- About badges: softer, smaller icons --- */
+.about .feature-icon{ color: var(--sage-green); opacity: 0.95; }
+.about .feature-icon-svg{ width: 32px; height: 32px; stroke-width: 1.6; }
 @media (max-width: 520px){
-  .about .about-features-grid{ grid-template-columns: 1fr; }
+  .about .feature-icon-svg{ width: 28px; height: 28px; }
 }
 </style>
 
@@ -1367,7 +1339,7 @@
       </div>
       
       <div class="flex-center view-prices-section">
-        <button class="ml-onclick-form" onclick="ml('show', 'Ayqnf2', true)" class="btn btn-secondary ml-onclick-form">View Pricing</button>
+        <button class="btn btn-primary">View Pricing</button>
       </div>
     </div>
   </section>
@@ -1387,19 +1359,19 @@
         
         <div class="about-features-grid">
           <div class="feature-item">
-            <div class="feature-icon"><svg class="feature-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M12 3l7 3v5c0 5-3.5 8.5-7 10-3.5-1.5-7-5-7-10V6l7-3z"/><path d="M9 12l2 2 4-4"/></svg></div>
+            <div class="feature-icon">🛡️</div>
             <div class="feature-text">Fully insured</div>
           </div>
           <div class="feature-item">
-            <div class="feature-icon"><svg class="feature-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><rect x="3" y="5" width="18" height="14" rx="2"/><path d="M7 9h5"/><path d="M7 13h3"/><circle cx="17" cy="12" r="2.5"/></svg></div>
+            <div class="feature-icon">👮</div>
             <div class="feature-text">Police-checked</div>
           </div>
           <div class="feature-item">
-            <div class="feature-icon"><svg class="feature-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M12 21s-7-6.3-7-11.3A7 7 0 0 1 12 3a7 7 0 0 1 7 6.7C19 14.7 12 21 12 21z"/><circle cx="12" cy="10" r="2.5"/></svg></div>
+            <div class="feature-icon">📍</div>
             <div class="feature-text">Local to Maitland</div>
           </div>
           <div class="feature-item">
-            <div class="feature-icon"><svg class="feature-icon-svg" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="1.8" stroke-linecap="round" stroke-linejoin="round" aria-hidden="true"><path d="M3 21c9-2 15-8 18-18 0 0-10 0-15 5S3 21 3 21z"/><path d="M3 21s8-8 10-10"/></svg></div>
+            <div class="feature-icon">🌱</div>
             <div class="feature-text">Non-toxic & biodegradable products</div>
           </div>
         </div>
@@ -1540,7 +1512,83 @@
 
 
   <!-- Footer -->
-  <footer>
+  
+  <!-- Contact Form Section (MailerLite) -->
+  <section id="contact" class="contact section">
+    <div class="container">
+      <h2 class="section-title">Contact Us</h2>
+      <p class="section-subtitle">Have a question? We’re listening.</p>
+
+      <style type="text/css">@import url("https://assets.mlcdn.com/fonts.css?version=1754313");</style>
+      <div id="mlb2-29229292" class="ml-form-embedContainer ml-subscribe-form ml-subscribe-form-29229292">
+        <div class="ml-form-align-center ">
+          <div class="ml-form-embedWrapper embedForm">
+            <div class="ml-form-embedBody ml-form-embedBodyDefault row-form">
+              <div class="ml-form-embedContent">
+                <h4>Have a Question? We’re Listening</h4>
+                <p>Whether you're just looking or ready to book, we're here to help you understand what we offer and what your home needs.</p>
+              </div>
+              <form class="ml-block-form" action="https://assets.mailerlite.com/jsonp/1690997/forms/161875292461204715/subscribe" method="post" target="_blank">
+                <div class="ml-form-formContent">
+                  <div class="ml-form-fieldRow"><div class="ml-field-group ml-field-name ml-validate-required">
+                    <input aria-label="name" aria-required="true" type="text" class="form-control" name="fields[name]" placeholder="Name" autocomplete="given-name">
+                  </div></div>
+                  <div class="ml-form-fieldRow"><div class="ml-field-group ml-field-email ml-validate-email ml-validate-required">
+                    <input aria-label="email" aria-required="true" type="email" class="form-control" name="fields[email]" placeholder="Email" autocomplete="email">
+                  </div></div>
+                  <div class="ml-form-fieldRow"><div class="ml-field-group ml-field-post_code">
+                    <input aria-label="post_code" type="number" class="form-control" name="fields[post_code]" placeholder="Post code">
+                  </div></div>
+                  <div class="ml-form-fieldRow"><div class="ml-field-group ml-field-phone">
+                    <input aria-label="phone" type="text" class="form-control" name="fields[phone]" placeholder="Phone">
+                  </div></div>
+                  <div class="ml-form-fieldRow ml-last-item"><div class="ml-field-group ml-field-message">
+                    <textarea class="form-control" name="fields[message]" aria-label="message" maxlength="255" placeholder="Message"></textarea>
+                  </div></div>
+                </div>
+                <div class="ml-form-embedPermissions">
+                  <div class="ml-form-embedPermissionsContent default privacy-policy">
+                    <p>You can unsubscribe anytime. For more details, review our Privacy Policy.</p>
+                  </div>
+                </div>
+                <div class="ml-form-recaptcha ml-validate-required" style="float: left;">
+                  <script src="https://www.google.com/recaptcha/api.js"></script>
+                  <div class="g-recaptcha" data-sitekey="6Lf1KHQUAAAAAFNKEX1hdSWCS3mRMv4FlFaNslaD"></div>
+                </div>
+                <input type="hidden" name="ml-submit" value="1">
+                <div class="ml-form-embedSubmit">
+                  <button type="submit" class="primary">Subscribe</button>
+                  <button disabled="disabled" style="display: none;" type="button" class="loading">
+                    <div class="ml-form-embedSubmitLoad"></div>
+                    <span class="sr-only">Loading...</span>
+                  </button>
+                </div>
+                <input type="hidden" name="anticsrf" value="true">
+              </form>
+            </div>
+            <div class="ml-form-successBody row-success" style="display: none">
+              <div class="ml-form-successContent">
+                <h4>Thank you — we've received your message!</h4>
+                <p>We'll be in touch within one business day to answer your questions or help you get started.<br>We look forward to helping you create a cleaner, calmer home.</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+      <script>
+        function ml_webform_success_29229292() {
+          var $ = window.ml_jQuery || window.jQuery || function(){return{show:function(){},hide:function(){}}};
+          if (typeof $ === 'function') {
+            $('.ml-subscribe-form-29229292 .row-success').show();
+            $('.ml-subscribe-form-29229292 .row-form').hide();
+          }
+        }
+      </script>
+      <script src="https://groot.mailerlite.com/js/w/webforms.min.js" type="text/javascript" async></script>
+    </div>
+  </section>
+
+<footer>
     <div class="footer-content">
       <div class="footer-nap">
         <p class="footer-business-info">
