--- a/index.html
+++ b/index.html
@@ -105,6 +105,114 @@
 </script>
 <!-- End MailerLite Universal -->
 
+
+<style id="site-base">
+:root{
+  --bg:#F4E8C8; /* warm sand */
+  --paper:#FAF4E3;
+  --text:#2E3A29;
+  --muted:#4A5647;
+  --brand:#7d8c75; /* sage green used in form */
+  --brand-strong:#5f6c59;
+  --ring: rgba(93,108,89,0.25);
+  --radius:16px;
+  --shadow:0 6px 20px rgba(0,0,0,0.06);
+  --container:1200px;
+  --spacing:24px;
+  --spacing-lg:40px;
+}
+
+*{box-sizing:border-box}
+html,body{margin:0;padding:0}
+body{
+  font-family: 'Montserrat', system-ui, -apple-system, Segoe UI, Roboto, 'Helvetica Neue', Arial, sans-serif;
+  color:var(--text);
+  background:var(--bg);
+  line-height:1.6;
+}
+
+/* Layout helpers */
+.container{max-width:var(--container); margin-inline:auto; padding: 0 20px;}
+.section{padding: clamp(48px, 6vw, 96px) 0;}
+.section-title{font-size: clamp(28px, 3.2vw, 40px); margin:0 0 8px; letter-spacing:0.2px}
+.section-subtitle{color:var(--muted); margin:0 0 24px}
+
+/* Header & nav */
+header{position:sticky; top:0; background:var(--paper); backdrop-filter:saturate(150%) blur(4px); border-bottom:1px solid rgba(0,0,0,0.05); z-index:50}
+header .container, header{display:flex; align-items:center; justify-content:space-between; padding:14px 20px}
+.logo-img{height:40px; width:auto}
+.nav-menu{display:flex; align-items:center; gap:20px}
+.nav-links{display:flex; gap:18px}
+.nav-link{color:var(--text); text-decoration:none; font-weight:600; padding:8px 10px; border-radius:10px}
+.nav-link:hover{background:rgba(0,0,0,0.06)}
+.hamburger{display:none}
+@media (max-width: 820px){
+  .nav-links{display:none}
+  .hamburger{display:flex; flex-direction:column; gap:4px; cursor:pointer}
+  .hamburger span{width:22px;height:2px;background:var(--text); display:block}
+}
+
+/* Hero */
+#home{background:var(--paper); border-radius:28px; margin:24px auto 0; padding: clamp(28px, 5vw, 56px)}
+.hero{display:grid; grid-template-columns: 1.1fr 0.9fr; gap:clamp(20px,4vw,44px); align-items:center}
+@media (max-width: 960px){ .hero{ grid-template-columns: 1fr } }
+.hero h1{font-size:clamp(36px, 5vw, 56px); line-height:1.1; margin:0 0 10px}
+.hero p.lead{color:var(--muted); font-size:clamp(16px, 2vw, 20px); margin:0 0 22px}
+.hero img{width:100%; border-radius:24px; display:block}
+
+/* Buttons */
+.btn, .ml-onclick-form{
+  display:inline-flex; align-items:center; justify-content:center;
+  padding:12px 18px; border-radius:12px; font-weight:700; border:1px solid transparent;
+  cursor:pointer; transition: transform .08s ease, box-shadow .2s ease, background .2s ease, border-color .2s ease;
+  font-size:16px;
+}
+.btn-primary, .ml-onclick-form.btn-primary{ background:var(--brand); color:#fff }
+.btn-primary:hover, .ml-onclick-form.btn-primary:hover{ background:var(--brand-strong); box-shadow: var(--shadow) }
+.btn-secondary{ background:transparent; color:var(--brand-strong); border-color:var(--brand-strong) }
+.btn-secondary:hover{ background:rgba(93,108,89,0.09) }
+.btn:focus-visible, .ml-onclick-form:focus-visible{ outline:2px solid var(--ring); outline-offset:2px }
+
+/* Services */
+#services .services-grid{display:grid; grid-template-columns: repeat(3, 1fr); gap:24px}
+@media (max-width: 980px){ #services .services-grid{ grid-template-columns: repeat(2, 1fr)} }
+@media (max-width: 640px){ #services .services-grid{ grid-template-columns: 1fr} }
+.service-card{ background:var(--paper); padding: 22px; border-radius:16px; box-shadow: var(--shadow); border:1px solid rgba(0,0,0,0.05)}
+.service-title{ margin:0 0 10px; font-size: 22px }
+.service-desc{ color:var(--muted); margin:10px 0 18px }
+.service-icon{ width:56px; height:auto; display:block; margin-bottom:12px }
+
+/* About copy (cards removed) */
+#about .about-content{ background:var(--paper); border-radius:24px; padding: clamp(20px, 4vw, 36px); box-shadow: var(--shadow); display:grid; grid-template-columns: 1.2fr 0.8fr; gap:28px; align-items:center}
+#about .about-image img{width:100%; border-radius:20px; display:block}
+@media (max-width: 960px){ #about .about-content{ grid-template-columns: 1fr } }
+
+/* Why choose us */
+#why-choose-us .list{ display:grid; gap:14px; padding:0; margin:0 }
+#why-choose-us .list li{ list-style:none; background:var(--paper); padding:14px 16px; border-radius:12px; border:1px solid rgba(0,0,0,0.06) }
+
+/* Areas */
+#areas .areas-grid{ display:grid; grid-template-columns: repeat(4,1fr); gap:14px }
+@media (max-width: 900px){ #areas .areas-grid{ grid-template-columns: repeat(2,1fr) } }
+@media (max-width: 520px){ #areas .areas-grid{ grid-template-columns: 1fr } }
+#areas .area{ background:var(--paper); padding:14px 16px; border-radius:12px; border:1px solid rgba(0,0,0,0.06) }
+
+/* FAQs */
+#faqs details{ background:var(--paper); border:1px solid rgba(0,0,0,0.06); border-radius:14px; padding: 14px 16px }
+#faqs details+details{ margin-top:10px }
+#faqs summary{ cursor:pointer; font-weight:700 }
+#faqs p{ color:var(--muted); margin:8px 0 0 }
+
+/* Contact section framing only (do not style .ml- classes) */
+#contact.contact-form.section{ padding-top: 48px; padding-bottom: 80px }
+#contact .section-title{ margin-bottom: 12px }
+#contact .contact-form-subtitle{ margin-bottom: 22px }
+#contact .contact-form-content{ max-width: 680px; margin-inline: auto }
+
+/* Footer */
+footer{ background:var(--paper); border-top:1px solid rgba(0,0,0,0.06); padding:24px 20px; margin-top:40px }
+</style>
+
 </head>
 <body>
   <!-- Header -->
